--- a/assets3/css/main.css
+++ b/assets3/css/main.css
@@ -1675,7 +1675,7 @@
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #f2849e !important;
+			color: #e2a400 !important;
 		}
 
 	strong, b {
